try to address some common color-contrast issues

--- a/src/components/badge/style.module.css
+++ b/src/components/badge/style.module.css
@@ -20,28 +20,16 @@ h1 > .badge {
 .success {
   background-color: var(--ifm-color-jade-100);
   color: var(--ifm-color-jade-600);
-
-  [data-theme='dark'] & {
-    background-color: var(--ifm-color-jade-1000);
-  }
 }
 
 .danger {
   background-color: var(--ifm-color-red-100);
   color: var(--ifm-color-red-600);
-  
-  [data-theme='dark'] & {
-    background-color: var(--ifm-color-red-1000);
-  }
 }
 
 .info {
   background-color: var(--ifm-color-teal-100);
   color: var(--ifm-color-teal-600);
-
-  [data-theme='dark'] & {
-    background-color: var(--ifm-color-teal-1000);
-  }
 }
 
 /* large light-green badge in page/content titles */
